--- a/src/index.css
+++ b/src/index.css
@@ -1,9 +1,12 @@
-@import "tailwindcss";
-@theme{
-  --breakpoint-tablet:768px;
+/* @import "tailwindcss";
+@theme {
+  --breakpoint-tablet: 768px;
   --breakpoint-mobile: 500px;
 }
-body{
-   font-family: "Raleway", sans-serif;
-   background-color: #fef6e1;
-}
+body {
+  font-family: "Raleway", sans-serif;
+  background-color: #fef6e1;
+} */
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
