--- a/src/index.css
+++ b/src/index.css
@@ -1,12 +1,9 @@
-/* @import "tailwindcss";
-@theme {
-  --breakpoint-tablet: 768px;
+@import "tailwindcss";
+@theme{
+  --breakpoint-tablet: 800px;
   --breakpoint-mobile: 500px;
 }
 body {
   font-family: "Raleway", sans-serif;
   background-color: #fef6e1;
-} */
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
+}
